--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Raleway', sans-serif;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 body{
@@ -18,3 +19,8 @@ header, section{
     background-color: #EAF2FD;
 }
 
+
+h3{
+    font-size: 2em;
+    font-weight: bold;
+}
