--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,13 +5,15 @@
     text-decoration: none;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: #F5F5F5;
 }
 
 header, section{
-    margin-top: 1vw;
+    margin-top: 2em;
     padding: 0.5vw 3vw;
 }
 
@@ -24,3 +26,10 @@ h3{
     font-size: 2em;
     font-weight: bold;
 }
+
+.sectionSkiHobb h3, #formacion h3, #experiencia h3{
+    text-align: center;
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
